implemento filtrado por categoría de recursos